tests/correctness/resources/tests/freestyle-2.check
newSource1.scala:8: error: The ListAsVector transformation description object contains a definition error: The @high annotation in method toRepr's type is applied to something that does not match the representation type. This is an error in the transformation description object definition.
    def toRepr[T](list: List[T]): Vector[T] @high = list.toVector
        ^
